force-app/main/default/objects/Assignment__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <referenceTo>ProjectTask__c</referenceTo>
    <relationshipLabel>Assignment</relationshipLabel>
    <relationshipName>Assignment</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>