force-app/main/default/objects/Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project__c</columns>
    <columns>Task__c</columns>
    <columns>AssignedTo__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>